{
  "version": 4,
  "terraform_version": "1.5.6",
  "serial": 23,
  "lineage": "0a34441d-ab05-fdb8-2709-d1de15534e95",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "wordpress_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04a5a6be1fa530f1c",
            "arn": "arn:aws:ec2:ap-south-2:401642791166:instance/i-052b64935660e74c2",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-052b64935660e74c2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "Terraform_kp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0921639c668f5334e",
            "private_dns": "ip-10-0-1-77.ap-south-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.77",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ef13f0d631fa52cc",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-012e194a921bfdd69",
            "tags": {
              "Name": "Wordpress"
            },
            "tags_all": {
              "Name": "Wordpress"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f9fb127733055007"
            ]
          },
          "dependencies": [
            "aws_security_group.dd_sg",
            "aws_subnet.dd_subnet",
            "aws_vpc.dd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dd_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:401642791166:internet-gateway/igw-06f50744d2d894139",
            "id": "igw-06f50744d2d894139",
            "owner_id": "401642791166",
            "tags": {
              "Name": "igw_dd"
            },
            "tags_all": {
              "Name": "igw_dd"
            },
            "vpc_id": "vpc-08460fee2068f35af"
          },
          "dependencies": [
            "aws_vpc.dd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dd_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:401642791166:route-table/rtb-0df270acbcd42eac7",
            "id": "rtb-0df270acbcd42eac7",
            "owner_id": "401642791166",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06f50744d2d894139",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt_dd"
            },
            "tags_all": {
              "Name": "rt_dd"
            },
            "timeouts": null,
            "vpc_id": "vpc-08460fee2068f35af"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.dd_igw",
            "aws_vpc.dd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dd_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-008462c7be8b059bc",
            "route_table_id": "rtb-0df270acbcd42eac7",
            "subnet_id": "subnet-012e194a921bfdd69"
          },
          "dependencies": [
            "aws_internet_gateway.dd_igw",
            "aws_route_table.dd_rt",
            "aws_subnet.dd_subnet",
            "aws_vpc.dd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dd_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:401642791166:security-group/sg-0f9fb127733055007",
            "description": "security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f9fb127733055007",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "sg_dd",
            "name_prefix": "",
            "owner_id": "401642791166",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg_dd"
            },
            "tags_all": {
              "Name": "sg_dd"
            },
            "timeouts": null,
            "vpc_id": "vpc-08460fee2068f35af"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dd_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:401642791166:subnet/subnet-012e194a921bfdd69",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-2a",
            "availability_zone_id": "aps2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-012e194a921bfdd69",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "401642791166",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet_dd"
            },
            "tags_all": {
              "Name": "subnet_dd"
            },
            "vpc_id": "vpc-08460fee2068f35af"
          },
          "dependencies": [
            "aws_vpc.dd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dd_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:401642791166:vpc/vpc-08460fee2068f35af",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05c4cb53a4327e080",
            "default_route_table_id": "rtb-049d7965df4f27a28",
            "default_security_group_id": "sg-038e3954b4b23a4f1",
            "dhcp_options_id": "dopt-07dc85fa9bdcaae1e",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08460fee2068f35af",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-049d7965df4f27a28",
            "owner_id": "401642791166",
            "tags": {
              "Name": "vpc_dd"
            },
            "tags_all": {
              "Name": "vpc_dd"
            }
          }
        }
      ]
    }
  ]
}